--- a/tracker/templates/tracker/transactions-list.html
+++ b/tracker/templates/tracker/transactions-list.html
@@ -13,4 +13,36 @@
     Your transactions
 </h1>
 
+<div class="relative overflow-x-auto text-white">
+    {% if transactions %}
+
+    <table class="table">
+        <thead class="text-xs text-white uppercase">
+            <tr>
+                <th class="px-6 py-3">Date</th>
+                <th class="px-6 py-3">Category</th>
+                <th class="px-6 py-3">Type</th>
+                <th class="px-6 py-3">Amount</th>
+            </tr>
+        </thead>
+
+        <tbody>
+            {% for transaction in transactions %}
+            <tr>
+                <td>{{ transaction.date }}</td>
+                <td>{{ transaction.category }}</td>
+                <td>{{ transaction.type }}</td>
+                <td>${{ transaction.amount }}</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+
+    {% else %}
+    <p class="text-2xl text-white">
+        No transactions found
+    </p>
+    {% endif %}
+</div>
+
 {% endblock %}
