--- a/tracker/templates/tracker/transactions-list.html
+++ b/tracker/templates/tracker/transactions-list.html
@@ -1,4 +1,5 @@
 {% extends 'tracker/base.html' %}
+{% load widget_tweaks %}
 
 {% block head_title %}
     Your Transactions
@@ -14,7 +15,20 @@
 </h1>
 
 <div class="relative overflow-x-auto text-white">
-    {% if transactions %}
+
+    <form method="GET">
+        <div class="mb-2 form-control">
+            <!--widget_tweaks allows for adding class to form labels-->
+            {{ filter.form.transaction_type|add_label_class:"label text-white" }}
+            {% render_field filter.form.transaction_type class="select bg-gray-50 text-gray-900" %}
+        </div>
+
+        <button class="btn btn-success">
+            Filter
+        </button>
+    </form>
+
+    {% if filter.qs %}
 
     <table class="table">
         <thead class="text-xs text-white uppercase">
@@ -27,7 +41,7 @@
         </thead>
 
         <tbody>
-            {% for transaction in transactions %}
+            {% for transaction in filter.qs %}
             <tr>
                 <td>{{ transaction.date }}</td>
                 <td>{{ transaction.category }}</td>
