--- a/tracker/templates/tracker/partials/transactions-container.html
+++ b/tracker/templates/tracker/partials/transactions-container.html
@@ -1,11 +1,36 @@
 {% load widget_tweaks %}
+{% load humanize %}
 
 <!-- flex-col-reverse will show filter column first on small screens -->
 <div class="flex flex-col-reverse md:grid md:grid-cols-4 md:gap-4" id="transaction-container">
     <!--3/4 columns for transaction table-->
     <div class="col-span-3">
-        {% if filter.qs %}
+        <div class="my-4">
+            <h1 class="mt-4 mb-4 prose prose-2xl text-white">
+                Totals
+            </h1>
+            <table class="table">
+                <thead class="text-xs text-white uppercase">
+                    <tr>
+                        <th>Total Income</th>
+                        <th>Total Expenses</th>
+                        <th>Net Income</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>${{ total_income|floatformat:2|intcomma }}</td>
+                        <td>${{ total_expenses|floatformat:2|intcomma }}</td>
+                        <td>${{ net_income|floatformat:2|intcomma }}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
 
+        {% if filter.qs %}
+        <h1 class="mt-8 mb-4 prose prose-2xl text-white">
+            Transactions
+        </h1>
         <table class="table">
             <thead class="text-xs text-white uppercase">
                 <tr>
