--- a/tracker/templates/tracker/partials/transactions-container.html
+++ b/tracker/templates/tracker/partials/transactions-container.html
@@ -70,6 +70,17 @@
                 {{ filter.form.transaction_type|add_label_class:"label text-white" }}
                 {% render_field filter.form.transaction_type class="select bg-gray-50 text-gray-900" %}
             </div>
+            <div class="mb-2 form-control">
+                {{ filter.form.start_date|add_label_class:"label text-white" }}
+                {% render_field filter.form.start_date class="input bg-gray-50 text-gray-900" %}
+            </div>
+            <div class="mb-2 form-control">
+                {{ filter.form.end_date|add_label_class:"label text-white" }}
+                {% render_field filter.form.end_date class="input bg-gray-50 text-gray-900" %}
+            </div>
+            <div class="mb-4 form-control">
+                {% render_field filter.form.category class="border-gray-50 text-gray-100 rounded focus:ring-green-500" %}
+            </div>
     
             <button class="btn btn-success">
                 Filter
