--- a/tracker/templates/tracker/partials/create-transaction.html
+++ b/tracker/templates/tracker/partials/create-transaction.html
@@ -4,4 +4,25 @@
     Create Transaction
 </h1>
 
-{{ form.as_div }}
+<form hx-post="{% url 'create-transaction' %}">
+    <div class="mb-2 form-control">
+        {{ form.date|add_label_class:"label text-white" }}
+        {% render_field form.date class="input text-black" %}
+    </div>
+    <div class="mb-2 form-control text-black">
+        {{ form.type|add_label_class:"label text-white" }}
+        {% render_field form.type class="input" %}
+    </div>
+    <div class="mb-2 form-control">
+        {{ form.amount|add_label_class:"label text-white" }}
+        {% render_field form.amount class="input text-black" %}
+    </div>
+    <div class="mb-2 form-control">
+        {{ form.category|add_label_class:"label text-white" }}
+        {% render_field form.category class="border-gray-50 text-gray-100 rounded focus:ring-green-500" %}
+    </div>
+
+    <button class="btn btn-success">
+        Add
+    </button>
+</form>
