--- a/tracker/templates/tracker/partials/create-transaction.html
+++ b/tracker/templates/tracker/partials/create-transaction.html
@@ -16,6 +16,10 @@
     <div class="mb-2 form-control">
         {{ form.amount|add_label_class:"label text-white" }}
         {% render_field form.amount class="input text-black" %}
+
+        {% for error in form.amount.errors %}
+            <p class="text-red-500 mt-2">{{error}}</p>
+        {% endfor %}
     </div>
     <div class="mb-2 form-control">
         {{ form.category|add_label_class:"label text-white" }}
